--- a/about_me.html
+++ b/about_me.html
@@ -12,7 +12,7 @@
         <img src="https://i.pinimg.com/originals/02/9e/d2/029ed2ab287d46fad2105fe6e02ce410.jpg" alt="Foto Profil" class="profile-pic">
         <p class="description">
             Halo! Saya Aditya Wirajaya Permono, seorang pengembang yang bersemangat dengan kecintaan untuk
-            membuat aplikasi web dan mobile. Dengan latar belakang ilmu komputer, saya telah mengasah
+            membuat aplikasi web dan mobile. Dengan latar belakang Teknologi Informasi, saya telah mengasah
             keterampilan saya dalam berbagai bahasa pemrograman dan kerangka kerja. Saya menikmati belajar 
             teknologi baru dan mengambil proyek-proyek menantang yang mendorong batas kemampuan saya.
         </p>
