--- a/about_me.html
+++ b/about_me.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="about_me.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about_me.html">About Me</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <section class="about-section">
         <h2>Tentang Saya</h2>
         <img src="https://i.pinimg.com/originals/02/9e/d2/029ed2ab287d46fad2105fe6e02ce410.jpg" alt="Foto Profil" class="profile-pic">
@@ -19,9 +30,13 @@
         <div class="social-icons">
             <a href="https://twitter.com" target="_blank"><img src="https://toppng.com/public/uploads/preview/twitter-x-icon-logo-116902890413xbfexhf8l.webp" alt="Twitter"></a>
             <a href="https://linkedin.com" target="_blank"><img src="https://th.bing.com/th/id/R.3ffcfcb93b1527cb663e7da9ac9c0ea5?rik=CKmzAKJa%2bUhZQg&riu=http%3a%2f%2ftechssocial.net%2fwp-content%2fuploads%2f2016%2f04%2fLinkedin.png&ehk=KWqXTlbLnBXcZn3raMCm1F617Iqv97CzM3ix2T02NXU%3d&risl=&pid=ImgRaw&r=0" alt="LinkedIn"></a>
-            <a href="https://github.com" target="_blank"><img src="https://lthub.ubc.ca/files/2021/06/GitHub-Logo.png" alt="GitHub"></a>
+            <a href="https://github.com/adityapermono8" target="_blank"><img src="https://lthub.ubc.ca/files/2021/06/GitHub-Logo.png" alt="GitHub"></a>
         </div>
         <button class="back"><a href="index.html">Home</a></button>
     </section>
+
+    <footer>
+        <p>&copy; 2024 Aditya Wirajaya Permono. Semua hak cipta dilindungi undang-undang.</p>
+    </footer>
 </body>
 </html>
